# backend/company/api/docs/swagger.json
@@ -119,6 +119,65 @@
                 }
             }
         },
+        "/companies/{company-id}/vacancies": {
+            "post": {
+                "description": "Creates new vacancy, returns id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vacancy"
+                ],
+                "summary": "Create new vacancy",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Company ID (UUID)",
+                        "name": "company-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request to create vacancy",
+                        "name": "vacancy_request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_HghaVlad_trainee-match_backend_company_internal_delivery_http_dto.VacancyCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_HghaVlad_trainee-match_backend_company_internal_delivery_http_dto.VacancyCreatedResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responds.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/responds.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responds.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/companies/{company-id}/vacancies/{vacancy-id}": {
             "get": {
                 "description": "Returns vacancy by id, company id should be correct, otherwise it's 404",
@@ -442,6 +501,78 @@
                 "website": {
                     "type": "string",
                     "example": "https://google.com"
+                }
+            }
+        },
+        "github_com_HghaVlad_trainee-match_backend_company_internal_delivery_http_dto.VacancyCreateRequest": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "type": "string",
+                    "example": "Mountain View"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Join Google's backend team to build scalable services in Go."
+                },
+                "duration_from_months": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "duration_to_months": {
+                    "type": "integer",
+                    "example": 6
+                },
+                "employment_type": {
+                    "type": "string",
+                    "example": "internship"
+                },
+                "flexible_schedule": {
+                    "type": "boolean"
+                },
+                "hours_per_week_from": {
+                    "type": "integer",
+                    "example": 20
+                },
+                "hours_per_week_to": {
+                    "type": "integer",
+                    "example": 40
+                },
+                "internship_to_offer": {
+                    "type": "boolean"
+                },
+                "is_paid": {
+                    "type": "boolean"
+                },
+                "salary_from": {
+                    "type": "integer",
+                    "example": 1000
+                },
+                "salary_to": {
+                    "type": "integer",
+                    "example": 1500
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Go Backend Developer Intern"
+                },
+                "work_format": {
+                    "type": "string",
+                    "enum": [
+                        "onsite",
+                        "remote",
+                        "hybrid"
+                    ],
+                    "example": "hybrid"
+                }
+            }
+        },
+        "github_com_HghaVlad_trainee-match_backend_company_internal_delivery_http_dto.VacancyCreatedResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
         },
